@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-10T16:15:03Z",
+  "timestamp" : "2024-05-11T00:53:29Z",
   "count_outdated" : 1110,
   "uniques_outdated" : 645,
-  "count" : 1114,
+  "count" : 1115,
   "uniques" : 649,
   "clones" : [
     {
@@ -25,9 +25,9 @@
     },
     {
       "timestamp": "2024-05-10T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
