@@ -1,5 +1,5 @@
 {
-  "count": 4,
+  "count": 5,
   "uniques": 3,
   "clones": [
     {
@@ -14,7 +14,7 @@
     },
     {
       "timestamp": "2024-05-10T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
